[tool.poetry]
name = "nishika_lithium_battery_soc_prediction"
version = "0.1.0"
description = ""
authors = ["takumiw"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
